# hex-player

./: .gitignore  Dockerfile  README.md  pyproject.toml  runner.py
.github/workflows/: ci.yml
src/Urrutia_Dario_Alfonso/: board.py  player.py  solution.py
tests/: test_board.py  test_mcts_node.py  test_smart_player.py
